--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "TeXDown"
 uuid = "33d84725-ae62-4ead-88b6-b68952f0ad05"
 authors = ["John Golden <golden@lanl.gov>"]
 version = "0.1.0"
+
+[deps]
+CommonMark = "a80b9123-70ca-4bc0-993e-6e3bcb318db6"
